--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 minecraft_version=1.7.10
 forge_version=10.13.2.1291
 mod_version=1.0.0
-mod_group=dmillerw.toolbox
-mod_archive_name=TechniciansToolbox
-mod_info_path=src/main/java/dmillerw/toolbox/TechniciansToolbox.java
+mod_group=dmillerw.creator
+mod_archive_name=Creator
+mod_info_path=src/main/java/dmillerw/creator/Creator.java
